force-app/main/default/objects/VsaVermoegenswert__c/VsaVermoegenswert__c.object-meta.xml
<CustomObject>
    <label>VSA Vermögenswert</label>
    <nameField>
        <label>Bezeichnung</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSA Vermögenswerte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>