force-app/main/default/objects/VsaVermoegenswert__c/fields/AktuellesGuthaben__c.field-meta.xml
<CustomField>
    <fullName>AktuellesGuthaben__c</fullName>
    <label>Aktuelles Guthaben</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>