force-app/main/default/objects/VsaVermoegenswert__c/fields/DigitaleVsa__c.field-meta.xml
<CustomField>
    <fullName>DigitaleVsa__c</fullName>
    <label>Digitale VSA</label>
    <referenceTo>DigitaleVsa__c</referenceTo>
    <relationshipLabel>Vermögenswerte</relationshipLabel>
    <relationshipName>VsaVermoegenswerte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>