force-app/main/default/objects/VsaVermoegenswert__c/fields/Gesellschaft__c.field-meta.xml
<CustomField>
    <fullName>Gesellschaft__c</fullName>
    <label>Gesellschaft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>