force-app/main/default/objects/VsaVermoegenswert__c/fields/MonatlicheZahlung__c.field-meta.xml
<CustomField>
    <fullName>MonatlicheZahlung__c</fullName>
    <label>Monatliche Zahlung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>