force-app/main/default/objects/VsaVermoegenswert__c/fields/Sparbeginn__c.field-meta.xml
<CustomField>
    <fullName>Sparbeginn__c</fullName>
    <label>Sparbeginn</label>
    <type>Date</type>
</CustomField>