force-app/main/default/objects/VsaVermoegenswert__c/fields/Standort__c.field-meta.xml
<CustomField>
    <fullName>Standort__c</fullName>
    <label>Standort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>