force-app/main/default/objects/VsaVermoegenswert__c/fields/Vertragssumme__c.field-meta.xml
<CustomField>
    <fullName>Vertragssumme__c</fullName>
    <label>Vertragssumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>