force-app/main/default/objects/VsaVermoegenswert__c/fields/Wert__c.field-meta.xml
<CustomField>
    <fullName>Wert__c</fullName>
    <label>Wert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>